# BasicWind--

./: CMakelists.txt  Plan  makefile
BasicWindLib/: CMakeLists.txt  basewin.h  main.cpp
BasicWindLib/Classes/Objects/: Button.cpp  Button.hpp  MainWindow.cpp  MainWindow.hpp  SourceWindow.cpp  SourceWindow.hpp  TextRect.cpp  TextRect.hpp  Window.cpp  Window.hpp
BasicWindLib/Classes/Objects/Shapes/: Circle.cpp  Circle.hpp  Rect.cpp  Rect.hpp  RoundedRect.cpp  RoundedRect.hpp  Shape.cpp  Shape.hpp
BasicWindLib/Classes/Tools/: Cursor.cpp  Cursor.hpp  TextHandler.cpp  TextHandler.hpp
BasicWindLib/Classes/Tools/Errors/: Error.cpp  Error.hpp  TypeError.cpp  TypeError.hpp
Classes/Objects/: MainWindow.cpp  MainWindow.hpp  SourceWindow.cpp  SourceWindow.hpp  Window.cpp  Window.hpp  Window.s  basewin.hpp
debug/: BasicWind++.code-workspace  CMakeLists.txt  main.cpp  makefile
debug/Classes/Objects/: MainWindow.cpp  MainWindow.hpp  SourceWindow.cpp  SourceWindow.hpp
debug/Classes/Objects/Shapes/: Circle.hpp  Shape.hpp
debug/Classes/Tools/Errors/: Error.cpp  Error.hpp  TypeError.hpp
